@@ -4,14 +4,12 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   ;:jvm-opts ^:replace  []
-  :jvm-opts ;["-server" "-Xmx2g" "-XX:-UseParallelGC"]
+  :jvm-opts 
   ^:replace
-  ["-Xms512m" "-Xmx1g"           ; Minimum and maximum sizes of the heap
-   "-XX:+UseParNewGC"            ; Use the new parallel GC in conjunction with
-   "-XX:+UseConcMarkSweepGC"     ;  the concurrent garbage collector
-   "-XX:+CMSConcurrentMTEnabled" ; Enable multi-threaded concurrent gc work (ParNewGC)
-   "-XX:MaxGCPauseMillis=20"     ; Specify a target of 20ms for max gc pauses
-   "-XX:+CMSIncrementalMode"     ; Do many small GC cycles to minimize pauses
+  ["-server"
+   "-Xms256m" "-Xmx1g"           ; Minimum and maximum sizes of the heap
+   "-XX:+UseG1GC"
+   "-XX:MaxGCPauseMillis=10"     ; Specify a target of 20ms for max gc pauses
    "-XX:MaxNewSize=257m"         ; Specify the max and min size of the new
    "-XX:NewSize=256m"            ;  generation to be small
    "-XX:+UseTLAB"                ; Uses thread-local object allocation blocks. This
